--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <button id="toggle-recent-2025">2025&nbsp;•</button><button id="toggle-recent-2024">2024&nbsp;•</button><button id="toggle-recent-2023">2023&nbsp;•</button><button id="toggle-recent-2022">2022&nbsp;•</button><button id="toggle-recent-2021">2021&nbsp;•</button><button id="toggle-recent-2020">2020</button></h4>
 <div id="recent-container-2025"><div id="block"><table id="recent-table-2025"><tr>
 	<th><img src="data/2025.jpg"></th>
-
+<th><a id="a254" src="jpg/revizor_26.jpg" title="Ревизор. Возвращение в СССР #26 (аудиокнига)"></a></th>
 <th><a id="a253" src="jpg/revizor_25.jpg" title="Ревизор. Возвращение в СССР #25 (аудиокнига)"></a></th>	
 <th><a id="a252" src="jpg/revizor_24.jpg" title="Ревизор. Возвращение в СССР #24 (аудиокнига)"></a></th>
 <th><a id="a251" src="jpg/revizor_23.jpg" title="Ревизор. Возвращение в СССР #23 (аудиокнига)"></a></th>
@@ -931,6 +931,7 @@
 <th><a id="a251" src="jpg/revizor_23.jpg" title="Ревизор. Возвращение в СССР #23 (аудиокнига)"></a></th>
 <th><a id="a252" src="jpg/revizor_24.jpg" title="Ревизор. Возвращение в СССР #24 (аудиокнига)"></a></th>
 <th><a id="a253" src="jpg/revizor_25.jpg" title="Ревизор. Возвращение в СССР #25 (аудиокнига)"></a></th>
+<th><a id="a254" src="jpg/revizor_26.jpg" title="Ревизор. Возвращение в СССР #26 (аудиокнига)"></a></th>
 </tr></table>
 
 
