Прочитал Тренируем мозг. Т №4

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <button id="toggle-recent-2025">2025&nbsp;•</button><button id="toggle-recent-2024">2024&nbsp;•</button><button id="toggle-recent-2023">2023&nbsp;•</button><button id="toggle-recent-2022">2022&nbsp;•</button><button id="toggle-recent-2021">2021&nbsp;•</button><button id="toggle-recent-2020">2020</button></h4>
 <div id="recent-container-2025"><div id="block"><table id="recent-table-2025"><tr>
 	<th><img src="data/2025.jpg"></th>
+
+<th><img src="jpg/mozg_tetrad_4.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №4"></th>	
 <th><a id="a254" src="jpg/revizor_26.jpg" title="Ревизор. Возвращение в СССР #26 (аудиокнига)"></a></th>
 <th><a id="a253" src="jpg/revizor_25.jpg" title="Ревизор. Возвращение в СССР #25 (аудиокнига)"></a></th>	
 <th><a id="a252" src="jpg/revizor_24.jpg" title="Ревизор. Возвращение в СССР #24 (аудиокнига)"></a></th>
@@ -1403,7 +1405,7 @@
 <th><img src="jpg/mozg_tetrad_1.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №1"></th>
 <th><img src="jpg/mozg_tetrad_2.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №2"></th>
 <th><img src="jpg/mozg_tetrad_3.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №3"></th>
-<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/mozg_tetrad_4.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №4"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a98" src="jpg/51_praktika.jpg" title="Маленькие привычки, большие успехи. 51 вдохновляющая практика, чтобы стать лучшей версией себя (аудиокнига)"></th>
