Прочитал Ранние дела Пуаро

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <div id="recent-container-2025"><div id="block"><table id="recent-table-2025"><tr>
 	<th><img src="data/2025.jpg"></th>
 
+<th><img src="jpg/pyaro_40.jpg" title="[Эркюль Пуаро #40] Ранние дела Пуаро (сборник): Визит незнакомки, Затерянный прииск, Коробка шоколада, Что в садике растет у Мэри, Загадка на море, Похищение Джонни Уэйверли, Экспресс на Плимут, Убийство на балу Победы, Случай в Маркет-Бейсинге, Наследство Лемесюрье, Корнуоллская загадка, Загадка трефового короля, Пропавшие чертежи, Случай с кухаркой из Клапама, Билет в один конец, Осиное гнездо, Двойная улика"></th>
 <th><img src="jpg/mozg_tetrad_4.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №4"></th>	
 <th><a id="a254" src="jpg/revizor_26.jpg" title="Ревизор. Возвращение в СССР #26 (аудиокнига)"></a></th>
 <th><a id="a253" src="jpg/revizor_25.jpg" title="Ревизор. Возвращение в СССР #25 (аудиокнига)"></a></th>	
@@ -1641,11 +1642,12 @@
 <th><img src="jpg/pyaro_37.jpg" title="[Эркюль Пуаро #37] Третья девушка"></th>
 <th><img src="jpg/pyaro_38.jpg" title="[Эркюль Пуаро #38] Вечеринка в Хэллоуин"></th>
 <th><img src="jpg/pyaro_39.jpg" title="[Эркюль Пуаро #39] Слоны умеют помнить"></th>
+<th><img src="jpg/pyaro_40.jpg" title="[Эркюль Пуаро #40] Ранние дела Пуаро (сборник): Визит незнакомки, Затерянный прииск, Коробка шоколада, Что в садике растет у Мэри, Загадка на море, Похищение Джонни Уэйверли, Экспресс на Плимут, Убийство на балу Победы, Случай в Маркет-Бейсинге, Наследство Лемесюрье, Корнуоллская загадка, Загадка трефового короля, Пропавшие чертежи, Случай с кухаркой из Клапама, Билет в один конец, Осиное гнездо, Двойная улика"></th>
 <th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
 <th><img src="jpg/marpl_2.jpg" title="[Мисс Марпл #2] Труп в библиотеке"></th>
-<th><img src="jpg/marpl_4.jpg" title="[Мисс Марпл #4] Объявлено убийство"></th>
-<th><img src="jpg/marpl_8.jpg" title="[Мисс Марпл #8] В 4.50 из Паддингтона"></th> </tr>
-<tr> <th><img src="jpg/beli_kon.jpg" title="Вилла Белый конь"></th>
+<th><img src="jpg/marpl_4.jpg" title="[Мисс Марпл #4] Объявлено убийство"></th> </tr>
+<tr> <th><img src="jpg/marpl_8.jpg" title="[Мисс Марпл #8] В 4.50 из Паддингтона"></th>
+<th><img src="jpg/beli_kon.jpg" title="Вилла Белый конь"></th>
 <th><img src="jpg/kristi_agata_01.jpg" title="Почему не позвали Уилби?"></th>
 <th><img src="jpg/10_niggers.jpg" title="Десять негритят"></th>
 <th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
