--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <button id="toggle-recent-2025">2025&nbsp;•</button><button id="toggle-recent-2024">2024&nbsp;•</button><button id="toggle-recent-2023">2023&nbsp;•</button><button id="toggle-recent-2022">2022&nbsp;•</button><button id="toggle-recent-2021">2021&nbsp;•</button><button id="toggle-recent-2020">2020</button></h4>
 <div id="recent-container-2025"><div id="block"><table id="recent-table-2025"><tr>
 	<th><img src="data/2025.jpg"></th>
+
+<th><a id="a256" src="jpg/revizor_28.jpg" title="Ревизор. Возвращение в СССР #28 (аудиокнига)"></a></th>	
 <th><a id="a255" src="jpg/revizor_27.jpg" title="Ревизор. Возвращение в СССР #27 (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_40.jpg" title="[Эркюль Пуаро #40] Ранние дела Пуаро (сборник): Визит незнакомки, Затерянный прииск, Коробка шоколада, Что в садике растет у Мэри, Загадка на море, Похищение Джонни Уэйверли, Экспресс на Плимут, Убийство на балу Победы, Случай в Маркет-Бейсинге, Наследство Лемесюрье, Корнуоллская загадка, Загадка трефового короля, Пропавшие чертежи, Случай с кухаркой из Клапама, Билет в один конец, Осиное гнездо, Двойная улика"></th>
 <th><img src="jpg/mozg_tetrad_4.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №4"></th>	
@@ -936,6 +938,7 @@
 <th><a id="a253" src="jpg/revizor_25.jpg" title="Ревизор. Возвращение в СССР #25 (аудиокнига)"></a></th>
 <th><a id="a254" src="jpg/revizor_26.jpg" title="Ревизор. Возвращение в СССР #26 (аудиокнига)"></a></th>
 <th><a id="a255" src="jpg/revizor_27.jpg" title="Ревизор. Возвращение в СССР #27 (аудиокнига)"></a></th>
+<th><a id="a256" src="jpg/revizor_28.jpg" title="Ревизор. Возвращение в СССР #28 (аудиокнига)"></a></th>
 </tr></table>
 
 
