Прочитал Сделать мир легче

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <div id="recent-container-2025"><div id="block"><table id="recent-table-2025"><tr>
 	<th><img src="data/2025.jpg"></th>
 
+<th><img src="jpg/sdelat_mir_legche.jpg" title="Сделать мир легче"></th>	
 <th><a id="a260" src="jpg/revizor_32.jpg" title="Ревизор. Возвращение в СССР #32 (аудиокнига)"></a></th>	
 <th><a id="a259" src="jpg/revizor_31.jpg" title="Ревизор. Возвращение в СССР #31 (аудиокнига)"></a></th>
 <th><a id="a258" src="jpg/revizor_30.jpg" title="Ревизор. Возвращение в СССР #30 (аудиокнига)"></a></th>	
@@ -1378,10 +1379,13 @@
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4><a href="http://flibusta.is/a/324535">Игошев Никита</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/273457">Ильяхов Максим</a></h4></th>
 <th colspan="2"><h4>									  Инглиш Макс</h4></th>	
 <th colspan="2"><h4><a href="https://flibusta.is/a/87906">Исделл Невил</a></h4></th>	
 </tr><tr>  
+<th><img src="jpg/sdelat_mir_legche.jpg" title="Сделать мир легче"></th>
+<th><img src="jpg/0.jpg"></th>		
 <th><img src="jpg/new_pravila.jpg" title="Новые правила деловой переписки"></th> 
 <th><img src="jpg/0.jpg"></th>	
 <th><img src="jpg/eng_1.jpg" title="Английский для дебилов"></th>
