--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <div id="recent-container-2025"><div id="block"><table id="recent-table-2025"><tr>
 	<th><img src="data/2025.jpg"></th>
 
+<th><a id="a261" src="jpg/revizor_33.jpg" title="Ревизор. Возвращение в СССР #33 (аудиокнига)"></a></th>	
 <th><img src="jpg/sdelat_mir_legche.jpg" title="Сделать мир легче"></th>	
 <th><a id="a260" src="jpg/revizor_32.jpg" title="Ревизор. Возвращение в СССР #32 (аудиокнига)"></a></th>	
 <th><a id="a259" src="jpg/revizor_31.jpg" title="Ревизор. Возвращение в СССР #31 (аудиокнига)"></a></th>
@@ -948,6 +949,7 @@
 <th><a id="a258" src="jpg/revizor_30.jpg" title="Ревизор. Возвращение в СССР #30 (аудиокнига)"></a></th> </tr>
 <tr> <th><a id="a259" src="jpg/revizor_31.jpg" title="Ревизор. Возвращение в СССР #31 (аудиокнига)"></a></th>
 <th><a id="a260" src="jpg/revizor_32.jpg" title="Ревизор. Возвращение в СССР #32 (аудиокнига)"></a></th>	
+<th><a id="a261" src="jpg/revizor_33.jpg" title="Ревизор. Возвращение в СССР #33 (аудиокнига)"></a></th>	
 </tr></table>
 
 
