--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <div id="recent-container-2025"><div id="block"><table id="recent-table-2025"><tr>
 	<th><img src="data/2025.jpg"></th>
 
+<th><a id="a263" src="jpg/revizor_35.jpg" title="Ревизор. Возвращение в СССР #35 (аудиокнига)"></a></th>	
 <th><a id="a262" src="jpg/revizor_34.jpg" title="Ревизор. Возвращение в СССР #34 (аудиокнига)"></a></th>		
 <th><img src="jpg/pyaro_41.jpg" title="[Эркюль Пуаро #41] Занавес: Последнее дело Пуаро"></th>	
 <th><a id="a261" src="jpg/revizor_33.jpg" title="Ревизор. Возвращение в СССР #33 (аудиокнига)"></a></th>	
@@ -953,6 +954,7 @@
 <th><a id="a260" src="jpg/revizor_32.jpg" title="Ревизор. Возвращение в СССР #32 (аудиокнига)"></a></th>	
 <th><a id="a261" src="jpg/revizor_33.jpg" title="Ревизор. Возвращение в СССР #33 (аудиокнига)"></a></th>	
 <th><a id="a262" src="jpg/revizor_34.jpg" title="Ревизор. Возвращение в СССР #34 (аудиокнига)"></a></th>
+<th><a id="a263" src="jpg/revizor_35.jpg" title="Ревизор. Возвращение в СССР #35 (аудиокнига)"></a></th>
 </tr></table>
 
 
