--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <div id="recent-container-2025"><div id="block"><table id="recent-table-2025"><tr>
 	<th><img src="data/2025.jpg"></th>
 
+<th><a id="a265" src="jpg/revizor_37.jpg" title="Ревизор. Возвращение в СССР #37 (аудиокнига)"></a></th>		
 <th><a id="a264" src="jpg/revizor_36.jpg" title="Ревизор. Возвращение в СССР #36 (аудиокнига)"></a></th>	
 <th><a id="a263" src="jpg/revizor_35.jpg" title="Ревизор. Возвращение в СССР #35 (аудиокнига)"></a></th>	
 <th><a id="a262" src="jpg/revizor_34.jpg" title="Ревизор. Возвращение в СССР #34 (аудиокнига)"></a></th>		
@@ -957,6 +958,7 @@
 <th><a id="a262" src="jpg/revizor_34.jpg" title="Ревизор. Возвращение в СССР #34 (аудиокнига)"></a></th>
 <th><a id="a263" src="jpg/revizor_35.jpg" title="Ревизор. Возвращение в СССР #35 (аудиокнига)"></a></th>
 <th><a id="a264" src="jpg/revizor_36.jpg" title="Ревизор. Возвращение в СССР #36 (аудиокнига)"></a></th>
+<th><a id="a265" src="jpg/revizor_37.jpg" title="Ревизор. Возвращение в СССР #37 (аудиокнига)"></a></th>
 </tr></table>
 
 
