Прочитал Ведьмак: Когти и клыки

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <div id="recent-container-2025"><div id="block"><table id="recent-table-2025"><tr>
 	<th><img src="data/2025.jpg"></th>
 
+<th><img src="jpg/witcher_0.jpg" title="Ведьмак: Когти и клыки (Сборник)"></th>	
 <th><a id="a265" src="jpg/revizor_37.jpg" title="Ревизор. Возвращение в СССР #37 (аудиокнига)"></a></th>		
 <th><a id="a264" src="jpg/revizor_36.jpg" title="Ревизор. Возвращение в СССР #36 (аудиокнига)"></a></th>	
 <th><a id="a263" src="jpg/revizor_35.jpg" title="Ревизор. Возвращение в СССР #35 (аудиокнига)"></a></th>	
@@ -2175,7 +2176,8 @@
 <th><img src="jpg/witcher_8.jpg" title="Владычица Озера"></th>
 <th><img src="jpg/witcher_1.jpg" title="Дорога без возврата"></th>
 <th><img src="jpg/witcher_9.jpg" title="Сезон Гроз"></th> 
-<th><img src="jpg/witcher_10.jpg" title="Перекрёсток воронов"></th> 
+<th><img src="jpg/witcher_10.jpg" title="Перекрёсток воронов"></th> </tr> 
+<tr> <th><img src="jpg/witcher_0.jpg" title="Ведьмак: Когти и клыки (Сборник)"></th> 
 </tr></table>
 
 
