--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <div id="recent-container-2025"><div id="block"><table id="recent-table-2025"><tr>
 	<th><img src="data/2025.jpg"></th>
 
+<th><a id="a266" src="jpg/revizor_38.jpg" title="Ревизор. Возвращение в СССР #38 (аудиокнига)"></a></th>	
 <th><img src="jpg/witcher_0.jpg" title="Ведьмак: Когти и клыки (Сборник)"></th>	
 <th><a id="a265" src="jpg/revizor_37.jpg" title="Ревизор. Возвращение в СССР #37 (аудиокнига)"></a></th>		
 <th><a id="a264" src="jpg/revizor_36.jpg" title="Ревизор. Возвращение в СССР #36 (аудиокнига)"></a></th>	
@@ -960,6 +961,7 @@
 <th><a id="a263" src="jpg/revizor_35.jpg" title="Ревизор. Возвращение в СССР #35 (аудиокнига)"></a></th>
 <th><a id="a264" src="jpg/revizor_36.jpg" title="Ревизор. Возвращение в СССР #36 (аудиокнига)"></a></th>
 <th><a id="a265" src="jpg/revizor_37.jpg" title="Ревизор. Возвращение в СССР #37 (аудиокнига)"></a></th>
+<th><a id="a266" src="jpg/revizor_38.jpg" title="Ревизор. Возвращение в СССР #38 (аудиокнига)"></a></th>
 </tr></table>
 
 
