--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <div id="recent-container-2025"><div id="block"><table id="recent-table-2025"><tr>
 	<th><img src="data/2025.jpg"></th>
 
+<th><a id="a268" src="jpg/revizor_40.jpg" title="Ревизор. Возвращение в СССР #40 (аудиокнига)"></a></th>	
 <th><a id="a267" src="jpg/revizor_39.jpg" title="Ревизор. Возвращение в СССР #39 (аудиокнига)"></a></th>	
 <th><a id="a266" src="jpg/revizor_38.jpg" title="Ревизор. Возвращение в СССР #38 (аудиокнига)"></a></th>	
 <th><img src="jpg/witcher_0.jpg" title="Ведьмак: Когти и клыки (Сборник)"></th>	
@@ -964,6 +965,8 @@
 <th><a id="a265" src="jpg/revizor_37.jpg" title="Ревизор. Возвращение в СССР #37 (аудиокнига)"></a></th>
 <th><a id="a266" src="jpg/revizor_38.jpg" title="Ревизор. Возвращение в СССР #38 (аудиокнига)"></a></th>
 <th><a id="a267" src="jpg/revizor_39.jpg" title="Ревизор. Возвращение в СССР #39 (аудиокнига)"></a></th>
+<th><a id="a268" src="jpg/revizor_40.jpg" title="Ревизор. Возвращение в СССР #40 (аудиокнига)"></a></th> </tr>
+<tr> 
 </tr></table>
 
 
