Прочитал 45 татуировок продавана

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <div id="recent-container-2025"><div id="block"><table id="recent-table-2025"><tr>
 	<th><img src="data/2025.jpg"></th>
 
+<th><img src="jpg/45_taty_prodavana.jpg" title="45 татуировок продавана"></th>	
 <th><a id="a269" src="jpg/revizor_41.jpg" title="Ревизор. Возвращение в СССР #41 (аудиокнига)"></a></th>		
 	<th><img src="data/12.2025.jpg"></th>	
 <th><a id="a268" src="jpg/revizor_40.jpg" title="Ревизор. Возвращение в СССР #40 (аудиокнига)"></a></th>	
@@ -762,13 +763,14 @@
 
 
 <table><tr align="left"> 
-<th colspan="3"><h4><a href="http://flibusta.is/a/208731">Батырев Максим</a></h4></th>
+<th colspan="4"><h4><a href="http://flibusta.is/a/208731">Батырев Максим</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/149766">Белоусова Татьяна</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/32388"> Беннет Арнольд</a></h4></th>
 <th colspan="3"><h4><a href="http://flibusta.is/a/215022">Белинг Стив</a></h4></th>
 </tr><tr>
 <th><img src="jpg/45_taty.jpg" title="45 татуировок менеджера"></th>
 <th><img src="jpg/45_taty_lichnosti.jpg" title="45 татуировок личности"></th>
+<th><img src="jpg/45_taty_prodavana.jpg" title="45 татуировок продавана"></th>
 <th><img src="jpg/0.jpg"></th>	
 <th><img src="jpg/etiket_1.jpg" title="Этикет. Полный свод правил светского и делового общения"></th>
 <th><img src="jpg/0.jpg"></th>
@@ -776,7 +778,6 @@
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/marvel_1.jpg" title="Мстители. Война Бесконечности. Путь героев"></th>
 <th><img src="jpg/marvel_2.jpg" title="Мстители. Финал. Путь героев"></th>
-<th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
