Прочитал Возвращение в СССР #42

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <div id="recent-container-2025"><div id="block"><table id="recent-table-2025"><tr>
 	<th><img src="data/2025.jpg"></th>
 
+<th><a id="a270" src="jpg/revizor_42.jpg" title="Ревизор. Возвращение в СССР #42 (аудиокнига)"></a></th>	
 <th><img src="jpg/45_taty_prodavana.jpg" title="45 татуировок продавана"></th>	
 <th><a id="a269" src="jpg/revizor_41.jpg" title="Ревизор. Возвращение в СССР #41 (аудиокнига)"></a></th>		
 	<th><img src="data/12.2025.jpg"></th>	
@@ -970,6 +971,7 @@
 <th><a id="a267" src="jpg/revizor_39.jpg" title="Ревизор. Возвращение в СССР #39 (аудиокнига)"></a></th>
 <th><a id="a268" src="jpg/revizor_40.jpg" title="Ревизор. Возвращение в СССР #40 (аудиокнига)"></a></th> </tr>
 <tr> <th><a id="a269" src="jpg/revizor_41.jpg" title="Ревизор. Возвращение в СССР #41 (аудиокнига)"></a></th>	
+<th><a id="a270" src="jpg/revizor_42.jpg" title="Ревизор. Возвращение в СССР #42 (аудиокнига)"></a></th>	
 </tr></table>
 
 
