Прочитал Возвращение в СССР #44

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <div id="recent-container-2025"><div id="block"><table id="recent-table-2025"><tr>
 	<th><img src="data/2025.jpg"></th>
 
+<th><a id="a272" src="jpg/revizor_44.jpg" title="Ревизор. Возвращение в СССР #44 (аудиокнига)"></a></th>	
 <th><a id="a271" src="jpg/revizor_43.jpg" title="Ревизор. Возвращение в СССР #43 (аудиокнига)"></a></th>	
 <th><a id="a270" src="jpg/revizor_42.jpg" title="Ревизор. Возвращение в СССР #42 (аудиокнига)"></a></th>	
 <th><img src="jpg/45_taty_prodavana.jpg" title="45 татуировок продавана"></th>	
@@ -974,6 +975,7 @@
 <tr> <th><a id="a269" src="jpg/revizor_41.jpg" title="Ревизор. Возвращение в СССР #41 (аудиокнига)"></a></th>	
 <th><a id="a270" src="jpg/revizor_42.jpg" title="Ревизор. Возвращение в СССР #42 (аудиокнига)"></a></th>
 <th><a id="a271" src="jpg/revizor_43.jpg" title="Ревизор. Возвращение в СССР #43 (аудиокнига)"></a></th>	
+<th><a id="a272" src="jpg/revizor_44.jpg" title="Ревизор. Возвращение в СССР #44 (аудиокнига)"></a></th>
 </tr></table>
 
 
