Прочитал Зернышки в кармане

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <button id="toggle-recent-2025">2025&nbsp;•</button><button id="toggle-recent-2024">&nbsp;2024&nbsp;•</button><button id="toggle-recent-2023">&nbsp;2023&nbsp;•</button><button id="toggle-recent-2022">&nbsp;2022&nbsp;•</button><button id="toggle-recent-2021">&nbsp;2021&nbsp;•</button><button id="toggle-recent-2020">&nbsp;2020</button></h4>
 <div id="recent-container-2025"><div id="block"><table id="recent-table-2025"><tr>
 	<th><img src="data/2025.jpg"></th>
-
+	
+<th><img src="jpg/marpl_6.jpg" title="[Мисс Марпл #6] Зернышки в кармане"></th>	
 <th><a id="a273" src="jpg/revizor_45.jpg" title="Ревизор. Возвращение в СССР #45 (аудиокнига)"></a></th>	
 <th><a id="a272" src="jpg/revizor_44.jpg" title="Ревизор. Возвращение в СССР #44 (аудиокнига)"></a></th>	
 <th><a id="a271" src="jpg/revizor_43.jpg" title="Ревизор. Возвращение в СССР #43 (аудиокнига)"></a></th>	
@@ -1693,6 +1694,7 @@
 <th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
 <th><img src="jpg/marpl_2.jpg" title="[Мисс Марпл #2] Труп в библиотеке"></th> </tr>
 <tr> <th><img src="jpg/marpl_4.jpg" title="[Мисс Марпл #4] Объявлено убийство"></th>
+<th><img src="jpg/marpl_6.jpg" title="[Мисс Марпл #6] Зернышки в кармане"></th>	
 <th><img src="jpg/marpl_8.jpg" title="[Мисс Марпл #8] В 4.50 из Паддингтона"></th>
 <th><img src="jpg/beli_kon.jpg" title="Вилла Белый конь"></th>
 <th><img src="jpg/kristi_agata_01.jpg" title="Почему не позвали Уилби?"></th>
