--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <button id="toggle-recent-2025">2025&nbsp;•</button><button id="toggle-recent-2024">&nbsp;2024&nbsp;•</button><button id="toggle-recent-2023">&nbsp;2023&nbsp;•</button><button id="toggle-recent-2022">&nbsp;2022&nbsp;•</button><button id="toggle-recent-2021">&nbsp;2021&nbsp;•</button><button id="toggle-recent-2020">&nbsp;2020</button></h4>
 <div id="recent-container-2025"><div id="block"><table id="recent-table-2025"><tr>
 	<th><img src="data/2025.jpg"></th>
-	
+
+<th><a id="a274" src="jpg/revizor_46.jpg" title="Ревизор. Возвращение в СССР #46 (аудиокнига)"></a></th>	
 <th><img src="jpg/marpl_6.jpg" title="[Мисс Марпл #6] Зернышки в кармане"></th>	
 <th><a id="a273" src="jpg/revizor_45.jpg" title="Ревизор. Возвращение в СССР #45 (аудиокнига)"></a></th>	
 <th><a id="a272" src="jpg/revizor_44.jpg" title="Ревизор. Возвращение в СССР #44 (аудиокнига)"></a></th>	
@@ -979,6 +980,7 @@
 <th><a id="a271" src="jpg/revizor_43.jpg" title="Ревизор. Возвращение в СССР #43 (аудиокнига)"></a></th>	
 <th><a id="a272" src="jpg/revizor_44.jpg" title="Ревизор. Возвращение в СССР #44 (аудиокнига)"></a></th>
 <th><a id="a273" src="jpg/revizor_45.jpg" title="Ревизор. Возвращение в СССР #45 (аудиокнига)"></a></th>
+<th><a id="a274" src="jpg/revizor_46.jpg" title="Ревизор. Возвращение в СССР #46 (аудиокнига)"></a></th>	
 </tr></table>
 
 
