--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <div id="recent-container-2025"><div id="block"><table id="recent-table-2025"><tr>
 	<th><img src="data/2025.jpg"></th>
 
+<th><a id="a275" src="jpg/revizor_47.jpg" title="Ревизор. Возвращение в СССР #47 (аудиокнига)"></a></th>	
 <th><a id="a274" src="jpg/revizor_46.jpg" title="Ревизор. Возвращение в СССР #46 (аудиокнига)"></a></th>	
 <th><img src="jpg/marpl_6.jpg" title="[Мисс Марпл #6] Зернышки в кармане"></th>	
 <th><a id="a273" src="jpg/revizor_45.jpg" title="Ревизор. Возвращение в СССР #45 (аудиокнига)"></a></th>	
@@ -981,6 +982,7 @@
 <th><a id="a272" src="jpg/revizor_44.jpg" title="Ревизор. Возвращение в СССР #44 (аудиокнига)"></a></th>
 <th><a id="a273" src="jpg/revizor_45.jpg" title="Ревизор. Возвращение в СССР #45 (аудиокнига)"></a></th>
 <th><a id="a274" src="jpg/revizor_46.jpg" title="Ревизор. Возвращение в СССР #46 (аудиокнига)"></a></th>	
+<th><a id="a275" src="jpg/revizor_47.jpg" title="Ревизор. Возвращение в СССР #47 (аудиокнига)"></a></th>	
 </tr></table>
 
 
