Прочитал Всё хреново

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <div id="recent-container-2025"><div id="block"><table id="recent-table-2025"><tr>
 	<th><img src="data/2025.jpg"></th>
 
+<th><a id="a277" src="jpg/vse_hrenovo.jpg" title="Всё хреново (аудиокнига)"></a></th>
 <th><a id="a276" src="jpg/revizor_48.jpg" title="Ревизор. Возвращение в СССР #48 (аудиокнига)"></a></th>	
 <th><a id="a275" src="jpg/revizor_47.jpg" title="Ревизор. Возвращение в СССР #47 (аудиокнига)"></a></th>	
 <th><a id="a274" src="jpg/revizor_46.jpg" title="Ревизор. Возвращение в СССР #46 (аудиокнига)"></a></th>	
@@ -1941,6 +1942,7 @@
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/myzh_pravila.jpg" title="Мужские правила"></th>
 <th><a id="a135" src="jpg/tonkoe_iskusstvo.jpg" title="Тонкое искусство пофигизма. Парадоксальный способ жить счастливо (аудиокнига)"></a></th> 
+<th><a id="a277" src="jpg/vse_hrenovo.jpg" title="Всё хреново (аудиокнига)"></a></th>
 </tr></table>
 
 
