Прочитал Бегущий человек

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <div id="recent-container-2025"><div id="block"><table id="recent-table-2025"><tr>
 	<th><img src="data/2025.jpg"></th>
 
+<th><a id="a278" src="jpg/running_man.jpg" title="Бегущий человек (аудиокнига)"></a></th>	
 <th><a id="a277" src="jpg/vse_hrenovo.jpg" title="Всё хреново (аудиокнига)"></a></th>
 <th><a id="a276" src="jpg/revizor_48.jpg" title="Ревизор. Возвращение в СССР #48 (аудиокнига)"></a></th>	
 <th><a id="a275" src="jpg/revizor_47.jpg" title="Ревизор. Возвращение в СССР #47 (аудиокнига)"></a></th>	
@@ -1544,7 +1545,7 @@
 
 
 <table><tr align="left"> 
-<th colspan="7"><h4><a href="https://flibusta.is/a/5803"> Кинг Стивен</a></h4></th>
+<th colspan="8"><h4><a href="https://flibusta.is/a/5803"> Кинг Стивен</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/17765">Киплинг Редьярд</a></h4></th>
 </tr><tr>  	
 <th><img src="jpg/pobeg_iz_shoushenka.jpg" title="Рита Хейуорт и спасение из Шоушенка"></th>
@@ -1553,6 +1554,7 @@
 <th><img src="jpg/strelok.jpg" title="Стрелок"></th>
 <th><a id="a176" src="jpg/glaza_drakona.jpg" title="Глаза дракона (аудиокнига)"></a></th>
 <th><a id="a177" src="jpg/mister_mers.jpg" title="Мистер Мерседес (аудиокнига)"></a></th>
+<th><a id="a278" src="jpg/running_man.jpg" title="Бегущий человек (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a54" src="jpg/kniga_djunglei.jpg" title="Книга джунглей (аудиокнига)"></a></th> 
 <th><img src="jpg/0.jpg"></th>
