Прочитал Мифы о животных и мифических существах

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <div id="recent-container-2025"><div id="block"><table id="recent-table-2025"><tr>
 	<th><img src="data/2025.jpg"></th>
 
+<th><a id="a280" src="jpg/mifi_o_zhivotnih.jpg" title="Мифы о животных и мифических существах (аудиокнига)"></a></th>		
 <th><a id="a279" src="jpg/slavyanskie_mifi.jpg" title="Славянские мифы (аудиокнига)"></a></th>		
 <th><a id="a278" src="jpg/running_man.jpg" title="Бегущий человек (аудиокнига)"></a></th>	
 <th><a id="a277" src="jpg/vse_hrenovo.jpg" title="Всё хреново (аудиокнига)"></a></th>
@@ -995,33 +996,42 @@
 <table><tr align="left"> 
 <th colspan="2"><h4><a href="http://flibusta.is/a/24193"> Войнович Владимир</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/184698">Волков Алексей</a></h4></th>
-<th colspan="6"><h4><a href="http://flibusta.is/a/116080">Вуйчич Ник</a></h4></th> 
+<th colspan="2"><h4><a href="http://flibusta.is/a/322981">Воробьева Наталья</a></h4></th>
 </tr><tr></tr>
 <th><a id="a224" src="jpg/ivan_chonkin.jpg" title="Жизнь и необычайные приключения солдата Ивана Чонкина. Книга 1-3"></a></th>			
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a137" src="jpg/fgrom_1.jpg" title="Майор Гром. Художественный роман (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/nick_vujicic_1.jpg" title="Жизнь без границ"></th>
-<th><img src="jpg/nick_vujicic_2.jpg" title="Неудержимый"></th>
-<th><img src="jpg/nick_vujicic_3.jpg" title="Будь сильным"></th>
-<th><img src="jpg/nick_vujicic_4.jpg" title="Любовь без границ"></th>
-<th><img src="jpg/nick_vujicic_5.jpg" title="Безграничность"></th> 
+<th><a id="a280" src="jpg/mifi_o_zhivotnih.jpg" title="Мифы о животных и мифических существах (аудиокнига)"></a></th>	
 <th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="6"><h4><a href="http://flibusta.is/a/116080">Вуйчич Ник</a></h4></th> 
 <th colspan="2"><h4><a href="http://flibusta.is/a/155434">Вэнс Эшли</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/60564"> Гандапас Радислав</a></h4></th>
-<th colspan="2"><h4><a href="http://flibusta.is/a/157853">Гапеев Валерий</a></h4></th> 
-<th colspan="2"><h4><a href="http://flibusta.is/a/267605">Гараев Роберт</a></h4></th>
-<th colspan="2"><h4><a href="http://flibusta.is/a/206066">Гард Рэй</a></h4></th>
 </tr><tr></tr>
+<th><img src="jpg/nick_vujicic_1.jpg" title="Жизнь без границ"></th>
+<th><img src="jpg/nick_vujicic_2.jpg" title="Неудержимый"></th>
+<th><img src="jpg/nick_vujicic_3.jpg" title="Будь сильным"></th>
+<th><img src="jpg/nick_vujicic_4.jpg" title="Любовь без границ"></th>
+<th><img src="jpg/nick_vujicic_5.jpg" title="Безграничность"></th> 
+<th><img src="jpg/0.jpg"></th>
 <th><a id="a31" src="jpg/ilon_mask.jpg" title="Илон Маск. Tesla, SpaceX и дорога в будущее (аудиокнига)"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/zh.jpg" title="Полная Ж. Жизнь как бизнес-проект"></th>
 <th><img src="jpg/0.jpg"></th>
+</tr></table>
+
+
+
+<table><tr align="left"> 
+<th colspan="2"><h4><a href="http://flibusta.is/a/157853">Гапеев Валерий</a></h4></th> 
+<th colspan="2"><h4><a href="http://flibusta.is/a/267605">Гараев Роберт</a></h4></th>
+<th colspan="2"><h4><a href="http://flibusta.is/a/206066">Гард Рэй</a></h4></th>
+</tr><tr></tr>
 <th><img src="jpg/noch_cmoka.jpg" title="Ноч цмока"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/slovo_pacana.jpg" title="Слово пацана. Криминальный Татарстан 1970–2010-х"></th>
