Прочитал Возвращение в СССР #49

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <div id="recent-container-2025"><div id="block"><table id="recent-table-2025"><tr>
 	<th><img src="data/2025.jpg"></th>
 
+<th><a id="a281" src="jpg/revizor_49.jpg" title="Ревизор. Возвращение в СССР #49 (аудиокнига)"></a></th>	
 <th><a id="a280" src="jpg/mifi_o_zhivotnih.jpg" title="Мифы о животных и мифических существах (аудиокнига)"></a></th>		
 <th><a id="a279" src="jpg/slavyanskie_mifi.jpg" title="Славянские мифы (аудиокнига)"></a></th>		
 <th><a id="a278" src="jpg/running_man.jpg" title="Бегущий человек (аудиокнига)"></a></th>	
@@ -989,6 +990,7 @@
 <th><a id="a274" src="jpg/revizor_46.jpg" title="Ревизор. Возвращение в СССР #46 (аудиокнига)"></a></th>	
 <th><a id="a275" src="jpg/revizor_47.jpg" title="Ревизор. Возвращение в СССР #47 (аудиокнига)"></a></th>	
 <th><a id="a276" src="jpg/revizor_48.jpg" title="Ревизор. Возвращение в СССР #48 (аудиокнига)"></a></th>
+<th><a id="a281" src="jpg/revizor_49.jpg" title="Ревизор. Возвращение в СССР #49 (аудиокнига)"></a></th>
 </tr></table>
 
 
