--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
 
 
 <h4 id="recent-heading">Последние прочитанные книги:&nbsp;
-<button id="toggle-recent-2025">2025&nbsp;•</button><button id="toggle-recent-2024">&nbsp;2024&nbsp;•</button><button id="toggle-recent-2023">&nbsp;2023&nbsp;•</button><button id="toggle-recent-2022">&nbsp;2022&nbsp;•</button><button id="toggle-recent-2021">&nbsp;2021&nbsp;•</button><button id="toggle-recent-2020">&nbsp;2020</button></h4>
-<div id="recent-container-2025"><div id="block"><table id="recent-table-2025"><tr>
-	<th><img src="data/2025.jpg"></th>
+<button id="toggle-recent-2026">2026&nbsp;•</button><button id="toggle-recent-2025">&nbsp;2025&nbsp;•</button><button id="toggle-recent-2024">&nbsp;2024&nbsp;•</button><button id="toggle-recent-2023">&nbsp;2023&nbsp;•</button><button id="toggle-recent-2022">&nbsp;2022&nbsp;•</button><button id="toggle-recent-2021">&nbsp;2021&nbsp;•</button><button id="toggle-recent-2020">&nbsp;2020</button></h4>
+<div id="recent-container-2026"><div id="block"><table id="recent-table-2026"><tr></tr>
+	<th><img src="data/2026.jpg"></th>
 
+	<th><img src="data/01.2026.jpg"></th></tr></table></div></div>
+<div id="recent-container-2025" class="hidden"><div id="block"><table id="recent-table-2025"><tr></tr>
+	<th><img src="data/2025.jpg"></th>
 <th><a id="a281" src="jpg/revizor_49.jpg" title="Ревизор. Возвращение в СССР #49 (аудиокнига)"></a></th>	
 <th><a id="a280" src="jpg/mifi_o_zhivotnih.jpg" title="Мифы о животных и мифических существах (аудиокнига)"></a></th>		
 <th><a id="a279" src="jpg/slavyanskie_mifi.jpg" title="Славянские мифы (аудиокнига)"></a></th>		
