Прочитал Первый дон

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <button id="toggle-recent-2026">2026&nbsp;•</button><button id="toggle-recent-2025">&nbsp;2025&nbsp;•</button><button id="toggle-recent-2024">&nbsp;2024&nbsp;•</button><button id="toggle-recent-2023">&nbsp;2023&nbsp;•</button><button id="toggle-recent-2022">&nbsp;2022&nbsp;•</button><button id="toggle-recent-2021">&nbsp;2021&nbsp;•</button><button id="toggle-recent-2020">&nbsp;2020</button></h4>
 <div id="recent-container-2026"><div id="block"><table id="recent-table-2026"><tr></tr>
 	<th><img src="data/2026.jpg"></th>
-
+<th><img src="jpg/pervi_don.jpg" title="Первый дон"></th>	
 	<th><img src="data/01.2026.jpg"></th></tr></table></div></div>
 <div id="recent-container-2025" class="hidden"><div id="block"><table id="recent-table-2025"><tr></tr>
 	<th><img src="data/2025.jpg"></th>
@@ -2079,10 +2079,11 @@
 
 
 <table><tr align="left"> 
-<th colspan="6"><h4><a href="https://flibusta.is/a/9242"> Пьюзо Марио</a></h4></th>
+<th colspan="7"><h4><a href="https://flibusta.is/a/9242"> Пьюзо Марио</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/550918">Разуваев Владимир</a></h4></th>
-<th colspan="2"><h4><a href="http://flibusta.is/a/44512"> Райан Мэг</a></h4></th>
+<th colspan="1"><h4><a href="http://flibusta.is/a/44512"> Райан Мэг</a></h4></th>
 </tr><tr>  
+<th><img src="jpg/pervi_don.jpg" title="Первый дон"></th>	
 <th><img src="jpg/godfather_1.jpg" title="Пьюзо Марио и Фалько Эд - Семья Корлеоне"></th>
 <th><img src="jpg/godfather_2.jpg" title="Крестный отец"></th>
 <th><img src="jpg/godfather_3.jpg" title="Сицилиец"></th>
@@ -2092,7 +2093,6 @@
 <th><img src="jpg/ironman.jpg" title="Ironman: история, а не истерия"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/v_etom_gody.jpg" title="В этом году я…"></th>
-<th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
