Прочитал Дядя Фёдор, пёс и кот

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <button id="toggle-recent-2026">2026&nbsp;•</button><button id="toggle-recent-2025">&nbsp;2025&nbsp;•</button><button id="toggle-recent-2024">&nbsp;2024&nbsp;•</button><button id="toggle-recent-2023">&nbsp;2023&nbsp;•</button><button id="toggle-recent-2022">&nbsp;2022&nbsp;•</button><button id="toggle-recent-2021">&nbsp;2021&nbsp;•</button><button id="toggle-recent-2020">&nbsp;2020</button></h4>
 <div id="recent-container-2026"><div id="block"><table id="recent-table-2026"><tr></tr>
 	<th><img src="data/2026.jpg"></th>
+
+<th><img src="jpg/prostokvashino_1.jpg" title="Дядя Фёдор, пёс и кот"></th>		
 <th><img src="jpg/pervi_don.jpg" title="Первый дон"></th>	
 	<th><img src="data/01.2026.jpg"></th></tr></table></div></div>
 <div id="recent-container-2025" class="hidden"><div id="block"><table id="recent-table-2025"><tr></tr>
@@ -2367,12 +2369,21 @@
 
 
 <table><tr align="left"> 
-<th colspan="2"><h4><a href="https://flibusta.is/a/89487"> Уоттлз Уоллес</a></h4></th>
-<th colspan="6"><h4><a href="https://flibusta.is/a/169477">Уэйд Пол</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/12753"> Уэллс Герберт</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/89487">Уоттлз Уоллес</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/19863">Успенский Эдуард</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/nauka_stat_bogatym.jpg" title="Наука стать богатым"></th>
 <th><img src="jpg/0.jpg"></th>	
+<th><img src="jpg/prostokvashino_1.jpg" title="Дядя Фёдор, пёс и кот"></th>	
+<th><img src="jpg/0.jpg"></th>	
+</tr></table>
+
+
+
+<table><tr align="left"> 
+<th colspan="6"><h4><a href="https://flibusta.is/a/169477">Уэйд Пол</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/12753"> Уэллс Герберт</a></h4></th>
+</tr><tr>  
 <th><img src="jpg/paul_wade_1.jpg" title="Тренировочная зона. Секретная система физических тренировок"></th>
 <th><img src="jpg/paul_wade_2.jpg" title="Тренировочная зона 2. Продвинутые техники физических тренировок"></th>
 <th><img src="jpg/paul_wade_3.jpg" title="Тренировочная зона 3. Взрывная калистеника"></th>
