Прочитал Извлечение троих

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <button id="toggle-recent-2026">2026&nbsp;•</button><button id="toggle-recent-2025">&nbsp;2025&nbsp;•</button><button id="toggle-recent-2024">&nbsp;2024&nbsp;•</button><button id="toggle-recent-2023">&nbsp;2023&nbsp;•</button><button id="toggle-recent-2022">&nbsp;2022&nbsp;•</button><button id="toggle-recent-2021">&nbsp;2021&nbsp;•</button><button id="toggle-recent-2020">&nbsp;2020</button></h4>
 <div id="recent-container-2026"><div id="block"><table id="recent-table-2026"><tr></tr>
 	<th><img src="data/2026.jpg"></th>
+<th><a id="a282" src="jpg/temnaya_bashnya_2.jpg" title="Извлечение троих (аудиокнига)"></a></th> 	
 <th><img src="jpg/prostokvashino_2.jpg" title="Зима в Простоквашино"></th>
 <th><img src="jpg/prostokvashino_1.jpg" title="Дядя Фёдор, пёс и кот"></th>		
 <th><img src="jpg/pervi_don.jpg" title="Первый дон"></th>	
@@ -209,7 +210,7 @@
 <th><a id="a174" src="jpg/tom_soer_3.jpg" title="Том Сойер за границей (аудиокнига)"></a></th>
 <th><a id="a173" src="jpg/atomic_heart_2.jpg" title="Atomic Heart. Далекое светлое будущее (аудиокнига)"></a></th>
 <th><a id="a172" src="jpg/tom_soer_2.jpg" title="Приключения Гекльберри Финна (аудиокнига)"></a></th>
-<th><img src="jpg/strelok.jpg" title="Стрелок"></th>
+<th><img src="jpg/temnaya_bashnya_1.jpg" title="Стрелок"></th>
 <th><a id="a171" src="jpg/tom_soer_1.jpg" title="Приключения Тома Сойера (аудиокнига)"></a></th>
 <th><img src="jpg/10_niggers.jpg" title="Десять негритят"></th>
 <th><a id="a170" src="jpg/sila_silnih.jpg" title="Сила сильных (сборник) (аудиокнига)"></a></th>
@@ -1563,17 +1564,24 @@
 
 
 <table><tr align="left"> 
-<th colspan="8"><h4><a href="https://flibusta.is/a/5803"> Кинг Стивен</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/17765">Киплинг Редьярд</a></h4></th>
+<th colspan="10"><h4><a href="https://flibusta.is/a/5803"> Кинг Стивен</a></h4></th>
 </tr><tr>  	
 <th><img src="jpg/pobeg_iz_shoushenka.jpg" title="Рита Хейуорт и спасение из Шоушенка"></th>
 <th><img src="jpg/zelenaya_milya.jpg" title="Зеленая Миля"></th>
 <th><img src="jpg/dolgaia_progylka.jpg" title="Долгая прогулка"></th>
-<th><img src="jpg/strelok.jpg" title="Стрелок"></th>
 <th><a id="a176" src="jpg/glaza_drakona.jpg" title="Глаза дракона (аудиокнига)"></a></th>
 <th><a id="a177" src="jpg/mister_mers.jpg" title="Мистер Мерседес (аудиокнига)"></a></th>
 <th><a id="a278" src="jpg/running_man.jpg" title="Бегущий человек (аудиокнига)"></a></th>
+<th><img src="jpg/temnaya_bashnya_1.jpg" title="Стрелок"></th>
+<th><a id="a282" src="jpg/temnaya_bashnya_2.jpg" title="Извлечение троих (аудиокнига)"></a></th> 
 <th><img src="jpg/0.jpg"></th>
+</tr></table>
+
+
+
+<table><tr align="left"> 
+<th colspan="2"><h4><a href="https://flibusta.is/a/17765">Киплинг Редьярд</a></h4></th>
+</tr><tr>  
 <th><a id="a54" src="jpg/kniga_djunglei.jpg" title="Книга джунглей (аудиокнига)"></a></th> 
 <th><img src="jpg/0.jpg"></th>
 </tr></table>
