Прочитал Тётя дяди Фёдора

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <button id="toggle-recent-2026">2026&nbsp;•</button><button id="toggle-recent-2025">&nbsp;2025&nbsp;•</button><button id="toggle-recent-2024">&nbsp;2024&nbsp;•</button><button id="toggle-recent-2023">&nbsp;2023&nbsp;•</button><button id="toggle-recent-2022">&nbsp;2022&nbsp;•</button><button id="toggle-recent-2021">&nbsp;2021&nbsp;•</button><button id="toggle-recent-2020">&nbsp;2020</button></h4>
 <div id="recent-container-2026"><div id="block"><table id="recent-table-2026"><tr></tr>
 	<th><img src="data/2026.jpg"></th>
+<th><img src="jpg/prostokvashino_3.jpg" title="Тётя дяди Фёдора"></th>
 <th><a id="a282" src="jpg/temnaya_bashnya_2.jpg" title="Извлечение троих (аудиокнига)"></a></th> 	
 <th><img src="jpg/prostokvashino_2.jpg" title="Зима в Простоквашино"></th>
 <th><img src="jpg/prostokvashino_1.jpg" title="Дядя Фёдор, пёс и кот"></th>		
@@ -2383,7 +2384,8 @@
 <th><img src="jpg/nauka_stat_bogatym.jpg" title="Наука стать богатым"></th>
 <th><img src="jpg/0.jpg"></th>	
 <th><img src="jpg/prostokvashino_1.jpg" title="Дядя Фёдор, пёс и кот"></th>	
-<th><img src="jpg/prostokvashino_2.jpg" title="Зима в Простоквашино"></th>	
+<th><img src="jpg/prostokvashino_2.jpg" title="Зима в Простоквашино"></th>
+<th><img src="jpg/prostokvashino_3.jpg" title="Тётя дяди Фёдора"></th>
 <th><img src="jpg/0.jpg"></th>	
 </tr></table>
 
