--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <button id="toggle-recent-2026">2026&nbsp;•</button><button id="toggle-recent-2025">&nbsp;2025&nbsp;•</button><button id="toggle-recent-2024">&nbsp;2024&nbsp;•</button><button id="toggle-recent-2023">&nbsp;2023&nbsp;•</button><button id="toggle-recent-2022">&nbsp;2022&nbsp;•</button><button id="toggle-recent-2021">&nbsp;2021&nbsp;•</button><button id="toggle-recent-2020">&nbsp;2020</button></h4>
 <div id="recent-container-2026"><div id="block"><table id="recent-table-2026"><tr></tr>
 	<th><img src="data/2026.jpg"></th>
+<th><a id="a283" src="jpg/rozhdestvo_v_rossiyskoy_imperii.jpg" title="Рождество в Российской империи (аудиокнига)"></a></th>
 <th><img src="jpg/prostokvashino_4.jpg" title="Любимая девочка Дяди Фёдора"></th>	
 <th><img src="jpg/prostokvashino_3.jpg" title="Тётя дяди Фёдора"></th>
 <th><a id="a282" src="jpg/temnaya_bashnya_2.jpg" title="Извлечение троих (аудиокнига)"></a></th> 	
@@ -1250,7 +1251,7 @@
 
 
 <table><tr align="left"> 
-<th colspan="6"><h4><a href="https://flibusta.is/a/218814">Дашкевич Виктор</a></h4></th>
+<th colspan="7"><h4><a href="https://flibusta.is/a/218814">Дашкевич Виктор</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/165262">Дашко Дмитрий</a></h4></th>
 </tr><tr></tr>
 <th><a id="a228" src="jpg/graf_averin_01.jpg" title="Дела Тайной канцелярии (аудиокнига)"></a></th>	
@@ -1258,6 +1259,7 @@
 <th><img src="jpg/graf_averin_2.jpg" title="Императорский Див"></th>
 <th><a id="a226" src="jpg/graf_averin_3.jpg" title="Демон из Пустоши (аудиокнига)"></a></th>
 <th><a id="a227" src="jpg/graf_averin_4.jpg" title="Тайна мертвого ректора (аудиокнига)"></a></th>
+<th><a id="a283" src="jpg/rozhdestvo_v_rossiyskoy_imperii.jpg" title="Рождество в Российской империи (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/magic_sled.jpg" title="Тайны магического следствия"></th>
 <th><img src="jpg/0.jpg"></th>
