--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <button id="toggle-recent-2026">2026&nbsp;•</button><button id="toggle-recent-2025">&nbsp;2025&nbsp;•</button><button id="toggle-recent-2024">&nbsp;2024&nbsp;•</button><button id="toggle-recent-2023">&nbsp;2023&nbsp;•</button><button id="toggle-recent-2022">&nbsp;2022&nbsp;•</button><button id="toggle-recent-2021">&nbsp;2021&nbsp;•</button><button id="toggle-recent-2020">&nbsp;2020</button></h4>
 <div id="recent-container-2026"><div id="block"><table id="recent-table-2026"><tr></tr>
 	<th><img src="data/2026.jpg"></th>
+<th><img src="jpg/prostokvashino_5.jpg" title="Дядя Фёдор идёт в школу, или Нэнси из Интернета в Простоквашино"></th>
 <th><a id="a283" src="jpg/rozhdestvo_v_rossiyskoy_imperii.jpg" title="Рождество в Российской империи (аудиокнига)"></a></th>
 <th><img src="jpg/prostokvashino_4.jpg" title="Любимая девочка Дяди Фёдора"></th>	
 <th><img src="jpg/prostokvashino_3.jpg" title="Тётя дяди Фёдора"></th>
@@ -2382,7 +2383,7 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4><a href="https://flibusta.is/a/89487">Уоттлз Уоллес</a></h4></th>
-<th colspan="3"><h4><a href="https://flibusta.is/a/19863">Успенский Эдуард</a></h4></th>
+<th colspan="8"><h4><a href="https://flibusta.is/a/19863">Успенский Эдуард</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/nauka_stat_bogatym.jpg" title="Наука стать богатым"></th>
 <th><img src="jpg/0.jpg"></th>	
@@ -2390,7 +2391,7 @@
 <th><img src="jpg/prostokvashino_2.jpg" title="Зима в Простоквашино"></th>
 <th><img src="jpg/prostokvashino_3.jpg" title="Тётя дяди Фёдора"></th>
 <th><img src="jpg/prostokvashino_4.jpg" title="Любимая девочка Дяди Фёдора"></th>
-<th><img src="jpg/0.jpg"></th>	
+<th><img src="jpg/prostokvashino_5.jpg" title="Дядя Фёдор идёт в школу, или Нэнси из Интернета в Простоквашино"></th>
 </tr></table>
 
 
