Прочитал Праздники в деревне Простоквашино

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <button id="toggle-recent-2026">2026&nbsp;•</button><button id="toggle-recent-2025">&nbsp;2025&nbsp;•</button><button id="toggle-recent-2024">&nbsp;2024&nbsp;•</button><button id="toggle-recent-2023">&nbsp;2023&nbsp;•</button><button id="toggle-recent-2022">&nbsp;2022&nbsp;•</button><button id="toggle-recent-2021">&nbsp;2021&nbsp;•</button><button id="toggle-recent-2020">&nbsp;2020</button></h4>
 <div id="recent-container-2026"><div id="block"><table id="recent-table-2026"><tr></tr>
 	<th><img src="data/2026.jpg"></th>
+<th><img src="jpg/prostokvashino_6.jpg" title="Праздники в деревне Простоквашино"></th>
 <th><img src="jpg/prostokvashino_5.jpg" title="Дядя Фёдор идёт в школу, или Нэнси из Интернета в Простоквашино"></th>
 <th><a id="a283" src="jpg/rozhdestvo_v_rossiyskoy_imperii.jpg" title="Рождество в Российской империи (аудиокнига)"></a></th>
 <th><img src="jpg/prostokvashino_4.jpg" title="Любимая девочка Дяди Фёдора"></th>	
@@ -2392,6 +2393,7 @@
 <th><img src="jpg/prostokvashino_3.jpg" title="Тётя дяди Фёдора"></th>
 <th><img src="jpg/prostokvashino_4.jpg" title="Любимая девочка Дяди Фёдора"></th>
 <th><img src="jpg/prostokvashino_5.jpg" title="Дядя Фёдор идёт в школу, или Нэнси из Интернета в Простоквашино"></th>
+<th><img src="jpg/prostokvashino_6.jpg" title="Праздники в деревне Простоквашино"></th>
 </tr></table>
 
 
