--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <button id="toggle-recent-2026">2026&nbsp;•</button><button id="toggle-recent-2025">&nbsp;2025&nbsp;•</button><button id="toggle-recent-2024">&nbsp;2024&nbsp;•</button><button id="toggle-recent-2023">&nbsp;2023&nbsp;•</button><button id="toggle-recent-2022">&nbsp;2022&nbsp;•</button><button id="toggle-recent-2021">&nbsp;2021&nbsp;•</button><button id="toggle-recent-2020">&nbsp;2020</button></h4>
 <div id="recent-container-2026"><div id="block"><table id="recent-table-2026"><tr></tr>
 	<th><img src="data/2026.jpg"></th>
+<th><img src="jpg/sarychev.jpg" title="Гайд по здоровью"></th>		
 <th><img src="jpg/prostokvashino_8.jpg" title="Неприятности в Простоквашино"></th>	
 <th><img src="jpg/prostokvashino_7.jpg" title="Новые порядки в Простоквашино"></th>	
 <th><img src="jpg/prostokvashino_6.jpg" title="Праздники в деревне Простоквашино"></th>
@@ -2252,11 +2253,14 @@
 
 
 <table><tr align="left"> 
-<th colspan="3"><h4><a href="https://flibusta.is/a/20642"> Сваллоу Джеймс</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/12204"> Свифт Джонатан</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/29118"> Сент-Экзюпери Антуан</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/207754">Серебряков Дмитрий</a></h4></th>
+<th colspan="2"><h4>									   Сарычев Кирилл</h4></th>
+<th colspan="8"><h4><a href="https://flibusta.is/a/20642"> Сваллоу Джеймс</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="https://flibusta.is/a/12204"> Свифт Джонатан |</a>&nbsp;
+					<a href="https://flibusta.is/a/29118"> Сент-Экзюпери Антуан |</a>&nbsp;
+					<a href="https://flibusta.is/a/207754">Серебряков Дмитрий</a></h4></th>
 </tr><tr>  
+<th><img src="jpg/sarychev.jpg" title="Гайд по здоровью"></th>	
+<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/deus_ex_1.jpg" title="Deus Ex. Эффект Икара"></th> 
 <th><img src="jpg/deus_ex_2.jpg" title="Deus Ex. Черный свет"></th>
 <th><img src="jpg/0.jpg"></th>
@@ -2265,7 +2269,6 @@
 <th><img src="jpg/malenki_princ.jpg" title="Маленький принц"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a214" src="jpg/sistema_1.jpg" title="Система. Книга 1 (аудиокнига)"></a></th>
-<th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
